@@ -1,3 +1,7 @@
+2010-02-03  Xavier Perseguers  <typo3@perseguers.ch>
+
+	* Added unit tests for bug #13412: BETWEEN operator is not supported
+
 2010-01-24  Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Fixed bug #13090: version warning with CSS styled content
